--- a/_includes/life-gallery.html
+++ b/_includes/life-gallery.html
@@ -1,6 +1,9 @@
 {% comment %}
 Usage:
-{% include life-gallery.html dir:"/images/life/soccer/" id:"soccer-gallery" caption:"Soccer Moments" %}
+{% include life-gallery.html 
+   dir="/images/life/soccer/" 
+   id="soccer-gallery" 
+   caption="Soccer Moments" %}
 {% endcomment %}
 
 {% assign gallery_files = site.static_files
