--- a/_includes/life-gallery.html
+++ b/_includes/life-gallery.html
@@ -8,7 +8,7 @@ Usage:
 
 {% assign gallery_files = site.static_files
   | where_exp: "f", "f.path contains include.dir"
-  | where_exp: "f", "f.extname matches '\\.(jpg|jpeg|png|gif|webp)$'"
+  | where_exp: "f", "f.extname == '.jpg' or f.extname == '.jpeg' or f.extname == '.png' or f.extname == '.gif' or f.extname == '.webp'"
   | sort: "name"
   | reverse
 %}
